# BeautyAndMatch

./: App.tsx  FIZGRAVITY_ROADMAP.md  MASTER_BLUEPRINT.md  THE MASTER AR BEAUTY PIPELINE & DICTIONARY.md  app.json  crash.txt  get_makeup_indices.py  get_topological_lips.py  package-lock.json  package.json  remove_mouth_hole.py  rewrite_cxx.py  update_inner_lips.py  update_lips.py
android/: autolinking.json  gradlew.bat  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/matchandbeauty/: FizgravityARView.kt  FizgravityARViewManager.kt  FizgravityRenderer.kt  MainActivity.kt  MainApplication.kt  MatchAndBeautyPackage.kt  MediaPipeFrameProcessorPlugin.kt
android/app/src/main/res/values/: strings.xml
cpp/: CMakeLists.txt  FizgravityJNI.cpp  FizgravityMakeupIndices.h  FizgravityMeshIndices.h  FizgravityRenderer.cpp  MatchAndBeautyCore.cpp  MatchAndBeautyCore.h  MatchAndBeautyCore.podspec
cpp/android/: build.gradle
ios/: Podfile
ios/MatchAndBeauty/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  MediaPipeFrameProcessorPlugin.mm
ios/MatchAndBeauty.xcodeproj/: project.pbxproj
ios/MatchAndBeauty.xcodeproj/xcshareddata/xcschemes/: MatchAndBeauty.xcscheme
src/native/: detectFaceLandmarks.ts
src/shaders/: contour.glsl  eye.glsl  foundation.glsl  lipstick.glsl  shadersSource.ts
src/store/: makeupStore.ts
